Oppdatert pdl-forvalter