@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id "org.sonarqube" version "3.3"
-    id 'org.springframework.boot' version "2.5.7"
-    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
+    id "org.sonarqube" version "3.5.0.2730"
+    id 'org.springframework.boot' version "2.7.5"
+    id 'io.spring.dependency-management' version "1.1.0"
 }
 
 
@@ -34,6 +34,7 @@ properties {
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
 repositories {
@@ -66,8 +67,8 @@ dependencies {
 
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'ma.glasnost.orika:orika-core:1.5.4'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.1'
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
